tests/ifcc-test-output/testfiles-3_03_04_declaration_with_multiple_affectations_invalid/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:13: error: ‘b’ undeclared (first use in this function)
    2 |     int a = b = c = 1;
      |             ^
input.c:2:13: note: each undeclared identifier is reported only once for each function it appears in
input.c:2:17: error: ‘c’ undeclared (first use in this function)
    2 |     int a = b = c = 1;
      |                 ^

return code: 1
